# kcp_cplusplus

./: README.md  stress.sh
client/: CMakeLists.txt  main.cpp
client/include/: ikcp.h  kcp_client.hpp  util.h
client/src/: ikcp.c  kcp_client.cpp  util.cpp
server/: CMakeLists.txt  main.cpp
server/include/: connection.hpp  connection_container.hpp  connection_manager.hpp  ikcp.h  util.hpp
server/src/: connection.cpp  connection_container.cpp  connection_manager.cpp  ikcp.c  util.cpp
